plutus-core/plutus-core/test/type-errors/constrTooMany.plc
(program 1.1.0
   (constr (sop [] []) 0 (con integer 2))
)
